# NetworkLinks

./: .coverage  .gitignore  AUTHORS  Dockerfile  Makefile  README.md  RELNOTES.md  classes.py  conf.py  example-conf.yml  i18n.py  launcher.py  log.py  netlink  netlink-mkpasswd  pyproject.toml  selectdriver.py  setup.py  structures.py  utils.py  world.py
.github/workflows/: ci.yml
coremods/: __init__.py  control.py  corecommands.py  exttargets.py  handlers.py  login.py  permissions.py  service_support.py
docs/: README.md  advanced-relay-config.md  automode.md  exttargets.md  faq.md  permissions-reference.md  relay-quickstart.md
docs/modelists/: README.md  channel-modes.html  extbans.html  modelists-genhtml.py  user-modes.html
docs/technical/: README.md  doxygen.conf  doxygen.sh  hooks-reference.md  permissions-api.md  pmodule-spec.md  protocol-modules.dot  release-process.md  services-api.md  using-ircparser.md  writing-plugins.md
locales/: netlink.pot
locales/fr/LC_MESSAGES/: netlink.mo  netlink.po
plugins/: __init__.py  alias.py  antispam.py  automode.py  bansync.py  bots.py  changehost.py  commands.py  ctcp.py  example.py  exec.py  fantasy.py  games.py  global.py  ignore.py  networks.py  opercmds.py  raw.py  relay.py  relay_clientbot.py  servermaps.py  servprotect.py  stats.py
protocols/: clientbot.py  hybrid.py  inspircd.py  ircs2s_common.py  p10.py  ts6_common.py  unreal.py
test/: conftest.py  protocol_test_fixture.py  test_antispam.py  test_automode.py  test_bansync.py  test_classes.py  test_i18n.py  test_ignore.py  test_irc_parsers.py  test_login.py  test_protocol_clientbot.py  test_protocol_inspircd.py  test_protocol_p10.py  test_protocol_unreal.py  test_relay_db.py  test_relay_helpers.py  test_relay_messages.py  test_service_support.py  test_tagmsg.py  test_utils.py  test_utils_extra.py
tools/: pre-commit
