[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pylinkirc"
dynamic = ["version"]
description = "PyLink IRC Services"
readme = "README.md"
requires-python = ">=3.9"
license = "MPL-2.0"
license-files = ["LICENSE.MPL2"]
authors = [{name = "James Lu", email = "james@overdrivenetworks.com"}]
keywords = ["IRC", "services", "relay"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Communications :: Chat :: Internet Relay Chat",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Operating System :: POSIX",
    "Natural Language :: English",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pyyaml>=5.1",
    "cachetools>=3.0",
]

[project.optional-dependencies]
password-hashing = ["passlib>=1.7.0"]
cron-support = ["psutil"]
relay-unicode = ["unidecode"]

[project.urls]
Homepage = "https://github.com/jlu5/PyLink"

[project.scripts]
pylink = "pylinkirc.launcher:main"

[tool.setuptools]
packages = ["pylinkirc", "pylinkirc.protocols", "pylinkirc.plugins", "pylinkirc.coremods"]
package-dir = {pylinkirc = "."}
script-files = ["pylink-mkpasswd"]

[tool.setuptools.package-data]
"*" = ["example-conf.yml", "VERSION", "README.md"]

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.mypy]
# Note: the supported runtime floor is 3.9 (requires-python), but recent mypy
# only accepts a 3.10+ target here; annotations use `from __future__ import
# annotations` so the checked syntax stays 3.9-compatible regardless.
python_version = "3.10"
ignore_missing_imports = true
# Lenient to start: type-check annotated code without forcing annotations everywhere.
check_untyped_defs = false
warn_redundant_casts = true
warn_unused_ignores = true
exclude = ['test/parser-tests/']
